--- a/reportDesigner/src/index.html
+++ b/reportDesigner/src/index.html
@@ -9,6 +9,6 @@
 <body>
    <h2>Simple Vue.js Parcel Starter Kit</h2>
    <div id="app"></div>
-   <script src="./app.js"></script>
+   <script src="./scripts/app.js"></script>
 </body>
 </html>
