It works in Development

--- a/reportDesigner/src/index.html
+++ b/reportDesigner/src/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <h2>Simple Vue.js Parcel Starter Kit</h2>
+    <h2>Simple Vue.js Parcel Starter Kit. hola</h2>
     <div id="app"></div>
     <script src="./scripts/app.js"></script>
 </body>
